<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".submission.SubmitActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:elevation="0dp"
            app:navigationIcon="@drawable/ic_back_arrow_white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/logoIv"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:src="@drawable/gads_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/titleTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:paddingHorizontal="8dp"
                    android:text="@string/google_africa_developer_scholarship"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/logoIv"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="16dp"
                android:text="Project Submission"
                android:textColor="@color/gadsYellow"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/gradient_line" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/firstNameEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/white_rectangle_border_radius_5dp"
        android:hint="@string/first_name_bold"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColorHint="@color/hintColorDark"
        app:layout_constraintBottom_toTopOf="@+id/emailEt"
        app:layout_constraintEnd_toStartOf="@+id/lastNameEt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_goneMarginTop="48dp"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/lastNameEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/white_rectangle_border_radius_5dp"
        android:drawablePadding="24dp"
        android:hint="@string/last_name_bold"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColorHint="@color/hintColorDark"
        app:layout_constraintBottom_toBottomOf="@id/firstNameEt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/firstNameEt"
        app:layout_constraintTop_toTopOf="@id/firstNameEt"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:background="@drawable/white_rectangle_border_radius_5dp"
        android:drawablePadding="24dp"
        android:hint="@string/email_bold"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="@color/hintColorDark"
        app:layout_constraintBottom_toTopOf="@+id/githubLinkEt"
        app:layout_constraintEnd_toEndOf="@id/lastNameEt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/firstNameEt"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEt" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/githubLinkEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:background="@drawable/white_rectangle_border_radius_5dp"
        android:drawablePadding="24dp"
        android:hint="@string/github_link_bold"
        android:inputType="textWebEditText"
        android:padding="16dp"
        android:textColorHint="@color/hintColorDark"
        app:layout_constraintBottom_toTopOf="@+id/nextBtn"
        app:layout_constraintEnd_toEndOf="@id/lastNameEt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/firstNameEt"
        app:layout_constraintTop_toBottomOf="@+id/emailEt" />


    <TextView
        android:id="@+id/nextBtn"
        style="@style/ButtonRoundedCorners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:paddingHorizontal="32dp"
        android:paddingVertical="12dp"
        android:text="Submit"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/lastNameEt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@id/firstNameEt"
        app:layout_constraintTop_toBottomOf="@+id/githubLinkEt" />

</androidx.constraintlayout.widget.ConstraintLayout>